[project]
name = "geeland"
version = "0.0.1"
dynamic = [
    "dependencies",
]
description = "A Python package extended from the Google Earth Engine Python API for processing and analysing geospatial satellite and reanalysis data in agriculture and environment."
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "geeland",
]
license = {text = "MIT License"}
authors = [
  {name = "Tuyen Ha", email = "tuyenmassey@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."console_scripts"]
geeland = "geeland.cli:main"

[project.optional-dependencies]
all = [
    "geeland[extra]",
]

extra = [
    "pandas",
]


[tool]
[tool.setuptools.packages.find]
include = ["geeland*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "geeland/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/tuyenhavan/geeland"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"